Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-18476

Handle write failures in mutation log more gracefully

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.1.1
    • 4.1.0
    • couchbase-bucket
    • None
    • Untriaged
    • Windows 64-bit
    • Unknown

    Description

      After writing to the mutation log, we assert on to check if the number of bytes written is greater than equal to 0. This isn't always the case as in the case of failures, we return -1. There needs to be better error handling in case of write failures to the mutation log.

      Attachments

        For Gerrit Dashboard: MB-18476
        # Subject Branch Project Status CR V

        Activity

          People

            sriram Sriram Ganesan (Inactive)
            sriram Sriram Ganesan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty