src/couch-kvstore/couch-kvstore.cc
@@ -90,27 +90,6 @@ static std::string getStrError(Db *db) {
     return errorStr;
 }
 
-static std::string getSystemStrerror(void) {
-    std::stringstream ss;
-#ifdef WIN32
-    char* win_msg = NULL;
-    DWORD err = GetLastError();
-    FormatMessageA(FORMAT_MESSAGE_ALLOCATE_BUFFER |
-                   FORMAT_MESSAGE_FROM_SYSTEM |
-                   FORMAT_MESSAGE_IGNORE_INSERTS,
-                   NULL, err,
-                   MAKELANGID(LANG_NEUTRAL, SUBLANG_DEFAULT),
-                   (LPTSTR) &win_msg,
-                   0, NULL);
-    ss << "errno = " << err << ": '" << win_msg << "'";
-    LocalFree(win_msg);
-#else
-    ss << "errno = " << errno << ": '" << strerror(errno) << "'";
-#endif
-
-    return ss.str();
-}
-
 static uint8_t determine_datatype(const unsigned char* value,
                                   size_t length) {
     if (checkUTF8JSON(value, length)) {
@@ -861,7 +840,7 @@ bool CouchKVStore::compactVBucket(const uint16_t vbid,
         LOG(EXTENSION_LOG_WARNING,
             "Warning: failed to rename '%s' to '%s': %s",
             compact_file.c_str(), new_file.c_str(),
-            getSystemStrerror().c_str());
+            getStringErrno().c_str());
 
         removeCompactFile(compact_file);
         return false;
@@ -877,7 +856,7 @@ bool CouchKVStore::compactVBucket(const uint16_t vbid,
         if (remove(new_file.c_str()) != 0) {
             LOG(EXTENSION_LOG_WARNING,
                 "Warning: Failed to remove '%s': %s",
-                new_file.c_str(), getSystemStrerror().c_str());
+                new_file.c_str(), getStringErrno().c_str());
         }
         return false;
     }
@@ -1437,7 +1416,7 @@ couchstore_error_t CouchKVStore::openDB(uint16_t vbucketId,
             dbFileName.c_str(), options,
             ((newRevNum > fileRev) ? newRevNum : fileRev),
             couchstore_strerror(errorCode),
-            getSystemStrerror().c_str());
+            getStringErrno().c_str());
     } else {
         if (newRevNum > fileRev) {
             // new revision number found, update it
@@ -1466,7 +1445,7 @@ couchstore_error_t CouchKVStore::openDB_retry(std::string &dbfile,
         LOG(EXTENSION_LOG_INFO, "INFO: couchstore_open_db failed, name=%s "
             "options=%" PRIX64 " error=%s [%s], try it again!",
             dbfile.c_str(), options, couchstore_strerror(errCode),
-            getSystemStrerror().c_str());
+            getStringErrno().c_str());
         *newFileRev = checkNewRevNum(dbfile);
         ++retry;
         if (retry == MAX_OPEN_DB_RETRY - 1 && options == 0 &&
@@ -1521,7 +1500,7 @@ void CouchKVStore::populateFileNameMap(std::vector<std::string> &filenames,
                     } else {
                         LOG(EXTENSION_LOG_WARNING,
                             "Warning: Failed to remove the stale file '%s': %s",
-                            old_file.str().c_str(), getSystemStrerror().c_str());
+                            old_file.str().c_str(), getStringErrno().c_str());
                     }
                 } else {
                     LOG(EXTENSION_LOG_WARNING,
@@ -2526,7 +2505,7 @@ void CouchKVStore::removeCompactFile(const std::string &filename) {
         else {
             LOG(EXTENSION_LOG_WARNING,
                 "Warning: Failed to remove compact file '%s': %s",
-                filename.c_str(), getSystemStrerror().c_str());
+                filename.c_str(), getStringErrno().c_str());
 
             if (errno != ENOENT) {
                 pendingFileDeletions.push(const_cast<std::string &>(filename));
